--- a/src/main/resources/css/jttp.css
+++ b/src/main/resources/css/jttp.css
@@ -321,6 +321,10 @@ h4.sidebar-header span {
 /*********NEW DESING END**********/
 /*********************************/
 
+.everit_logo{
+  content:url(E_logo.png);
+}
+
 .table-endtime:hover, .table-starttime:hover, .table-issue:hover, .table-comment:hover{
 cursor:pointer;
 }
