--- a/src/main/resources/templates/reporting/reportingusersettings.vm
+++ b/src/main/resources/templates/reporting/reportingusersettings.vm
@@ -18,7 +18,7 @@
   <title>Reporting User Settings</title>
 </head>
 <body>
-  $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:reporting-user-settings-resources")
+  $webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.plugin.reporting-user-settings-resources")
 
   <script type="text/javascript">
     window.everit = window.everit || {};
@@ -42,7 +42,7 @@
         <span class="aui-avatar aui-avatar-large">
           <span class="aui-avatar-inner">
             <a href="http://www.everit.biz/index.php?nyelv=en" target="_blank">
-              <img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:reporting-user-settings-resources/E_logo.png" alt="Everit reporting logo">
+              <img class="everit_logo" alt="Everit reporting logo">
             </a>
           </span>
         </span>
