--- a/src/main/resources/templates/reporting/table_report.vm
+++ b/src/main/resources/templates/reporting/table_report.vm
@@ -22,7 +22,7 @@ $webResourceManager.requireResource("jira.webresources:calendar")
 $webResourceManager.requireResource("jira.webresources:calendar-en")
 $webResourceManager.requireResource("jira.webresources:dwr", null)   
 $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
-$webResourceManager.requireResource("org.everit.jira.timetracker.plugin:table_report-resources")
+$webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.plugin.table_report-resources")
 <body>
 #set($rendererType = "atlassian-wiki-renderer")
   #if($currentCalendar.useISO8601 == true)
