--- a/src/main/resources/templates/timetracker/adminsettings.vm
+++ b/src/main/resources/templates/timetracker/adminsettings.vm
@@ -18,7 +18,7 @@
   <title>Timetracker Global Settings</title>
 </head>
 <body>
-  $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:admin-settings-resources")
+  $webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.plugin.admin-settings-resources")
 
   <header class="aui-page-header">
     <div class="aui-page-header-inner">
@@ -26,7 +26,7 @@
          <span class="aui-avatar aui-avatar-large">
            <span class="aui-avatar-inner">
              <a href="http://www.everit.biz/index.php?nyelv=en" target="_blank">
-               <img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:admin-settings-resources/E_logo.png" alt="Everit TimeTracker logo">
+               <img class="everit_logo" alt="Everit TimeTracker logo">
              </a>
            </span>
          </span>
