v2.x-JIRAPLUGIN-322-RC_IMPORVMENTS
Fix bugs after testing

--- a/src/main/resources/templates/reporting/table_report.vm
+++ b/src/main/resources/templates/reporting/table_report.vm
@@ -58,7 +58,7 @@ $webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.plug
          <span class="aui-avatar aui-avatar-large">
            <span class="aui-avatar-inner">
              <a href="http://www.everit.biz/index.php?nyelv=en" target="_blank">
-               <img src="$contextPath/download/resources/org.everit.jira.timetracker.plugin:reporting-resources/E_logo.png" alt="Everit reporting logo">
+               <img class="everit_logo" alt="Everit reporting logo">
              </a>
            </span>
          </span>
