--- a/src/main/resources/css/jttp.css
+++ b/src/main/resources/css/jttp.css
@@ -14,373 +14,305 @@
  * limitations under the License.
  */
 @CHARSET "UTF-8";
+
 {
-margin-bottom: 0em;
+margin-bottom
+:
+ 
+0
+em
+;
+
+
 }
 
 /******************************/
 /*******Summary Progress*******/
 /******************************/
 div.progress {
-    /*background-color: #f5f5f5;*/
-    background-color: #eeeeee;
-    border-radius: 3.01px;
+	/*background-color: #f5f5f5;*/
+	background-color: #eeeeee;
+	border-radius: 3.01px;
 }
 
 div.progress .progress-bar-success {
-    background-color: #14892c;
+	background-color: #14892c;
 }
 
 div.progress .progress-bar-warning {
-    background-color: #f6c342;
+	background-color: #f6c342;
 }
 
 div.progress .progress-bar-danger {
-    background-color: #d04437;
+	background-color: #d04437;
 }
 
 div.progress .progress-bar-danger-nowork {
-    background: repeating-linear-gradient(
-    45deg,
-    #d7908b,
-    #d7908b 10px,
-    #d04437 10px,
-    #d04437 20px
-  );
-    background: -webkit-repeating-linear-gradient(
-    45deg,
-    #d7908b,
-    #d7908b 10px,
-    #d04437 10px,
-    #d04437 20px
-  );
-    background: -moz-repeating-linear-gradient(
-    45deg,
-    #d7908b,
-    #d7908b 10px,
-    #d04437 10px,
-    #d04437 20px
-  );
-    background: -o-repeating-linear-gradient(
-    45deg,
-    #d7908b,
-    #d7908b 10px,
-    #d04437 10px,
-    #d04437 20px
-  );
-    background: -ms-repeating-linear-gradient(
-    45deg,
-    #d7908b,
-    #d7908b 10px,
-    #d04437 10px,
-    #d04437 20px
-  );
+	background: repeating-linear-gradient(45deg, #d7908b, #d7908b 10px, #d04437 10px,
+		#d04437 20px);
+	background: -webkit-repeating-linear-gradient(45deg, #d7908b, #d7908b 10px, #d04437
+		10px, #d04437 20px);
+	background: -moz-repeating-linear-gradient(45deg, #d7908b, #d7908b 10px, #d04437
+		10px, #d04437 20px);
+	background: -o-repeating-linear-gradient(45deg, #d7908b, #d7908b 10px, #d04437 10px,
+		#d04437 20px);
+	background: -ms-repeating-linear-gradient(45deg, #d7908b, #d7908b 10px, #d04437 10px
+		, #d04437 20px);
 }
 
 div.progress .progress-bar-warning-nowork {
-    background: repeating-linear-gradient(
-    45deg,
-    #bca979,
-    #bca979 10px,
-    #f6c342 10px,
-    #f6c342 20px
-  );
-    background: -webkit-repeating-linear-gradient(
-    45deg,
-    #bca979,
-    #bca979 10px,
-    #f6c342 10px,
-    #f6c342 20px
-  );
-    background: -moz-repeating-linear-gradient(
-    45deg,
-    #bca979,
-    #bca979 10px,
-    #f6c342 10px,
-    #f6c342 20px
-  );
-    background: -o-repeating-linear-gradient(
-    45deg,
-    #bca979,
-    #bca979 10px,
-    #f6c342 10px,
-    #f6c342 20px
-  );
-    background: -ms-repeating-linear-gradient(
-    45deg,
-    #bca979,
-    #bca979 10px,
-    #f6c342 10px,
-    #f6c342 20px
-  );
+	background: repeating-linear-gradient(45deg, #bca979, #bca979 10px, #f6c342 10px,
+		#f6c342 20px);
+	background: -webkit-repeating-linear-gradient(45deg, #bca979, #bca979 10px, #f6c342
+		10px, #f6c342 20px);
+	background: -moz-repeating-linear-gradient(45deg, #bca979, #bca979 10px, #f6c342
+		10px, #f6c342 20px);
+	background: -o-repeating-linear-gradient(45deg, #bca979, #bca979 10px, #f6c342 10px,
+		#f6c342 20px);
+	background: -ms-repeating-linear-gradient(45deg, #bca979, #bca979 10px, #f6c342 10px
+		, #f6c342 20px);
 }
 
 div.progress .progress-bar-success-nowork {
-    background: repeating-linear-gradient(
-    45deg,
-    #7ec58b,
-    #7ec58b 10px,
-    #14892c 10px,
-    #14892c 20px
-  );
-    background: -webkit-repeating-linear-gradient(
-    45deg,
-    #7ec58b,
-    #7ec58b 10px,
-    #14892c 10px,
-    #14892c 20px
-  );
-    background: -moz-repeating-linear-gradient(
-    45deg,
-    #7ec58b,
-    #7ec58b 10px,
-    #14892c 10px,
-    #14892c 20px
-  );
-    background: -o-repeating-linear-gradient(
-    45deg,
-    #7ec58b,
-    #7ec58b 10px,
-    #14892c 10px,
-    #14892c 20px
-  );
-    background: -ms-repeating-linear-gradient(
-    45deg,
-    #7ec58b,
-    #7ec58b 10px,
-    #14892c 10px,
-    #14892c 20px
-  );
+	background: repeating-linear-gradient(45deg, #7ec58b, #7ec58b 10px, #14892c 10px,
+		#14892c 20px);
+	background: -webkit-repeating-linear-gradient(45deg, #7ec58b, #7ec58b 10px, #14892c
+		10px, #14892c 20px);
+	background: -moz-repeating-linear-gradient(45deg, #7ec58b, #7ec58b 10px, #14892c
+		10px, #14892c 20px);
+	background: -o-repeating-linear-gradient(45deg, #7ec58b, #7ec58b 10px, #14892c 10px,
+		#14892c 20px);
+	background: -ms-repeating-linear-gradient(45deg, #7ec58b, #7ec58b 10px, #14892c 10px
+		, #14892c 20px);
 }
 
 .progress-label {
-    color: #565656;
+	color: #565656;
 }
-
 
 /*********************************/
 /**********NEW DESING*************/
 /*********************************/
-
-.aui-page-hybrid .aui-page-header, .aui-page-hybrid .aui-navgroup-horizontal .aui-navgroup-inner, .aui-page-hybrid .aui-page-panel-inner{
-    width: 980px;
+.aui-page-hybrid .aui-page-header, .aui-page-hybrid .aui-navgroup-horizontal .aui-navgroup-inner,
+	.aui-page-hybrid .aui-page-panel-inner {
+	width: 980px;
 }
 
-.aui-page-hybrid #footer .footer-body{
-    width: 100%;
+.aui-page-hybrid #footer .footer-body {
+	width: 100%;
 }
 
 .jttp-headline {
-    padding-bottom: 25px;
+	padding-bottom: 25px;
 }
 
 /* for daily progress */
-
 .jttp-headline-progress {
-    width: 50%;
+	width: 50%;
 }
 
 div.jttp-headline-progress-number {
-    float: right;
-    color: #565656;
+	float: right;
+	color: #565656;
 }
 
 div.jttp-headline-progress-date {
-    float: left;
-    padding-bottom: 5px;
-    color: #565656;
+	float: left;
+	padding-bottom: 5px;
+	color: #565656;
 }
 
 /* --- */
-
-div.jttp-headline-date {  
-    padding-top: 4px;
-    /*font-weight: bold;*/
-    font-size: large;
-    vertical-align: middle;
-    color: #565656;
+div.jttp-headline-date {
+	padding-top: 4px;
+	/*font-weight: bold;*/
+	font-size: large;
+	vertical-align: middle;
+	color: #565656;
 }
 
-.aui-group.aui-group-trio > .aui-item {
-    text-align: center;
+.aui-group.aui-group-trio>.aui-item {
+	text-align: center;
 }
 
-.aui-group.aui-group-trio > .aui-item + .aui-item + .aui-item {
-    text-align: center;
+.aui-group.aui-group-trio>.aui-item+.aui-item+.aui-item {
+	text-align: center;
 }
 
 .stepper-group-container {
-    padding-left: 10px;
+	padding-left: 10px;
 }
 
 td.jttp-worklog-no-remaining {
-  color: red;
+	color: red;
 }
 
 #jttp-worklog-table tbody tr:hover {
-  background-color: #f5f5f5;
+	background-color: #f5f5f5;
 }
 
 table.aui>thead>tr>th {
-  color: #707070;
+	color: #707070;
 }
 
-.aui-item.summary-module>table.aui>tbody>tr>td{
-    color: #707070;
+.aui-item.summary-module>table.aui>tbody>tr>td {
+	color: #707070;
 }
 
 table#jttp-worklog-table th#jttp-worklog-actions {
-  min-width: 5rem;
-  width: 5rem;
+	min-width: 5rem;
+	width: 5rem;
 }
 
 table#jttp-worklog-table th#jttp-worklog-issue-type {
-  min-width: 1rem;
-  width: 1rem;
+	min-width: 1rem;
+	width: 1rem;
 }
 
 table#jttp-worklog-table th#jttp-worklog-issue-key {
-  min-width: 5rem;
-  width: 5rem;
+	min-width: 5rem;
+	width: 5rem;
 }
 
 table#jttp-worklog-table th#jttp-worklog-issue-remaining {
-  min-width: 3rem;
-  width: 3rem;
+	min-width: 3rem;
+	width: 3rem;
 }
 
 table#jttp-worklog-table th#jttp-worklog-start {
-  min-width: 3rem;
-  width: 3rem;
+	min-width: 3rem;
+	width: 3rem;
 }
 
 table#jttp-worklog-table th#jttp-worklog-end {
-  min-width: 3rem;
-  width: 3rem;
+	min-width: 3rem;
+	width: 3rem;
 }
 
 table#jttp-worklog-table th#jttp-worklog-duration {
-  min-width: 5rem;
-  width: 5rem;
+	min-width: 5rem;
+	width: 5rem;
 }
 
 .aui-group>.aui-item.summary-module {
-    width: 40%;
+	width: 40%;
 }
 
 /* Inline time input fields flex */
 div#jttp-logwork-time {
-  display: flex;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flex;
-  display: -o-flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
+	display: flex;
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: flex-start;
 }
 
-div#jttp-logwork-time > div.field-group {
-  width: auto;
-  margin-right: 4rem;
+div#jttp-logwork-time>div.field-group {
+	width: auto;
+	margin-right: 4rem;
 }
 
-div#jttp-logwork-time > div.field-group.duration {
-  margin-right: 0rem;
+div#jttp-logwork-time>div.field-group.duration {
+	margin-right: 0rem;
 }
 
-form.aui .buttons-container .aui-button+.aui-button{
-  margin-left: 0px;
+form.aui .buttons-container .aui-button+.aui-button {
+	margin-left: 0px;
 }
 
-
-form.aui .buttons-container .aui-button+.aui-button:hover,
-form.aui .buttons-container .aui-button+.aui-button:focus,
-form.aui .buttons-container .aui-button+.aui-button:active{
-  margin-left: -1px;
+form.aui .buttons-container .aui-button+.aui-button:hover, form.aui .buttons-container .aui-button+.aui-button:focus,
+	form.aui .buttons-container .aui-button+.aui-button:active {
+	margin-left: -1px;
 }
 
 h4.sidebar-header {
-    width: 100%;
-    text-align: left;
-    border-bottom: 1px solid #e6e6e6;
-    line-height: 0.1em;
-    margin-bottom: 0.5rem;
-    margin-top: 3rem;
+	width: 100%;
+	text-align: left;
+	border-bottom: 1px solid #e6e6e6;
+	line-height: 0.1em;
+	margin-bottom: 0.5rem;
+	margin-top: 3rem;
 }
 
 h4.sidebar-header span {
-  font-size: 14px;
-  background: #fff;
-  padding-right: 0.5rem;
-  color: #707070;
+	font-size: 14px;
+	background: #fff;
+	padding-right: 0.5rem;
+	color: #707070;
 }
 
-#issueSelect-multi-select{
-  max-width: 450px;
+#issueSelect-multi-select {
+	max-width: 450px;
 }
 
 /*********************************/
 /*********NEW DESING END**********/
 /*********************************/
-
-.table-endtime:hover, .table-starttime:hover, .table-issue:hover, .table-comment:hover{
-cursor:pointer;
+.table-endtime:hover, .table-starttime:hover, .table-issue:hover,
+	.table-comment:hover {
+	cursor: pointer;
 }
 
-#jttp-logwork-form{
-    padding: 4px 0px 4px 0px;
+#jttp-logwork-form {
+	padding: 4px 0px 4px 0px;
 }
 
 table.aui>tbody>tr.rowEdit {
-    background-color: #FFEAAE;
+	background-color: #FFEAAE;
 }
 
-#jttp-worklog-table tbody tr.rowEdit:hover{
-    background-color: #f6c342;
+#jttp-worklog-table tbody tr.rowEdit:hover {
+	background-color: #f6c342;
 }
 
 .grid {
-    font-family:Arial,Helvetica,sans-serif;
-    font-size:12px;
-    background-color:#FCFCFC;
-    border:1px solid #D2D2D2;
-    border-collapse:collapse;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 12px;
+	background-color: #FCFCFC;
+	border: 1px solid #D2D2D2;
+	border-collapse: collapse;
 }
+
 .grid td {
-    text-align: center;
-    vertical-align: inherit;
+	text-align: center;
+	vertical-align: inherit;
 }
 
 .grid td.align_left {
-    text-align: left;
+	text-align: left;
 }
 
 .grid th, .grid td {
-    border:1px solid #D2D2D2;
-    padding:4px;
+	border: 1px solid #D2D2D2;
+	padding: 4px;
 }
 
 .admin-border {
 	border-top: 1px solid #D2D2D2;
 	padding-bottom: 10px;
-    padding-top: 20px;
-    padding-right: 5px;
+	padding-top: 20px;
+	padding-right: 5px;
 }
 
-input[type="text"]:disabled{
-    background:#D3D3D3!important;
-    background-color:#D3D3D3!important;
+input[type="text"]:disabled {
+	background: #D3D3D3 !important;
+	background-color: #D3D3D3 !important;
 }
-.calendar tbody td.logged{
-    background-color: #FFFFC2;
-    font-weight: 500;
+
+.calendar tbody td.logged {
+	background-color: #FFFFC2;
+	font-weight: 500;
 }
-.calendar tbody td.othermonth.oweekend{
-    color: #ec8484;
+
+.calendar tbody td.othermonth.oweekend {
+	color: #ec8484;
 }
-.calendar tbody td.othermonth{
-    color: #7e7a7a;
+
+.calendar tbody td.othermonth {
+	color: #7e7a7a;
 }
 
 div.calendar {
@@ -389,136 +321,139 @@ div.calendar {
 	box-shadow: 0px 0px 0px #666;
 	z-index: inherit;
 }
+
 .content {
-    margin: 0 .714em .714em;
-    position: relative;
-	width:970px;
+	margin: 0 .714em .714em;
+	position: relative;
+	width: 970px;
 }
+
 .rounded {
-    background-color: #fff;
-    border: 1px solid #bbb;
-    -moz-border-radius: .4em;
-    -webkit-border-radius: .4em;
-    border-radius: .4em;
+	background-color: #fff;
+	border: 1px solid #bbb;
+	-moz-border-radius: .4em;
+	-webkit-border-radius: .4em;
+	border-radius: .4em;
 }
+
 .item-header {
-    margin: 12px 12px 0 12px;
-    min-height: 48px;
-    position: relative;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-top: 0px;
+	margin: 12px 12px 0 12px;
+	min-height: 48px;
+	position: relative;
+	padding-left: 5px;
+	padding-right: 5px;
+	padding-top: 0px;
 	width: 980px;
 }
+
 #main-content {
-    min-width: 990px;
+	min-width: 990px;
 }
+
 .item-summary {
-    font-size: 2em;
-    line-height: 1.167;
-    margin: 0;
+	font-size: 2em;
+	line-height: 1.167;
+	margin: 0;
 	display: inline-block;
 	padding-top: 6px;
 }
 
-#error_message{
-    color: white;
-    text-align: center;
-    border: 1px solid;
-    border-color: #d04437;
-    border-radius: 3px;
-    background-color: #d04437;
+#error_message {
+	color: white;
+	text-align: center;
+	border: 1px solid;
+	border-color: #d04437;
+	border-radius: 3px;
+	background-color: #d04437;
 }
 
-
-.jttp-calendar{
-    text-align: left;
-    vertical-align: inherit;
-    padding:5px;
+.jttp-calendar {
+	text-align: left;
+	vertical-align: inherit;
+	padding: 5px;
 }
 
-
-.label-row{
-    width: 5%;
+.label-row {
+	width: 5%;
 }
 
-.value-row{
-    width: 85px;
+.value-row {
+	width: 85px;
 }
 
-.time-input-div{
-	position:absolute;
-	left:0;
-	right:0;
-	top:0;
-	bottom:0;
+.time-input-div {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
 }
 
-.time-input-span{
-	position:relative;
-}
-	
-.inside-content{
-	margin:10px;
-	width:970px;
+.time-input-span {
+	position: relative;
 }
 
-.jttp-aui-icon{
+.inside-content {
+	margin: 10px;
+	width: 970px;
+}
+
+.jttp-aui-icon {
 	margin: 3px;
-	cursor:pointer;
+	cursor: pointer;
 }
 
-.settings-label-column{
+.settings-label-column {
 	text-align: right;
-	width:15%;
+	width: 15%;
 	vertical-align: top;
 }
 
-.settings-value-column{
-	width:40%;
+.settings-value-column {
+	width: 40%;
 }
 
-.setting-separator-label-div{
+.setting-separator-label-div {
 	margin-top: 10px;
 	margin-bottom: 10px;
 }
 
-.settings-input{
+.settings-input {
 	margin-right: 10px;
 }
 
-.adminsettings-label-column{
+.adminsettings-label-column {
 	text-align: right;
-	width:10%;
+	width: 10%;
 	vertical-align: top;
 }
 
-.message{
+.message {
 	text-align: center;
 	padding: 3px;
 	font-size: 14px;
 }
 
 p {
-    margin: 0;
+	margin: 0;
 }
 
-.warn-message{
+.warn-message {
 	text-align: center;
 	padding: 3px;
 	font-size: 11px;
 	width: 35%;
 	color: #3c78b5;
-	font-style:italic;
+	font-style: italic;
 }
 
-.result-table{
+.result-table {
 	text-align: center;
 	padding-bottom: 5px;
 }
 
-.admin-settings-value-column{
-    padding-left: 5px;
+.admin-settings-value-column {
+	padding-left: 5px;
 }
 
 .separator-space {
@@ -529,7 +464,23 @@ p {
 	color: red;
 }
 
-.dates-textarea{
+.dates-textarea {
 	width: 95%;
 	height: 75px;
+}
+
+.jttp-message-container {
+	position: fixed;
+	top: 15rem;
+	right: 30px;
+	z-index: 4000;
+}
+
+.jttp-message {
+	opacity: 1;
+	top: 0;
+	left: 0;
+	max-height: 300px;
+	position: relative;
+	transition: opacity .2s, top .5s;
 }
