--- a/src/main/resources/css/jttp.css
+++ b/src/main/resources/css/jttp.css
@@ -537,3 +537,10 @@ p {
   display: block;
   margin: 5px 0 0 0;
 }
+
+table.operation-table {
+  width: 100%;
+}
+table.operation-table td {
+  width: 33%
+}
