--- a/src/main/resources/css/user_settings.css
+++ b/src/main/resources/css/user_settings.css
@@ -36,5 +36,7 @@ form.aui div.field-group textarea {
 }
 
 .everit_logo{
-  content:url(E_logo.png);
+  background-image:url(E_logo.png);
+  background-size: 48px 48px;
+  height: 48px;
 }
