--- a/src/main/resources/css/reporting.css
+++ b/src/main/resources/css/reporting.css
@@ -15,7 +15,9 @@
  */
 
 .everit_logo{
-  content:url(E_logo.png);
+  background-image:url(E_logo.png);
+  background-size: 48px 48px;
+  height: 48px;
 }
 
 
