--- a/src/main/resources/templates/timetracker/list.vm
+++ b/src/main/resources/templates/timetracker/list.vm
@@ -21,12 +21,16 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
               <thead>
                 <tr>
                   <th id="jttp-worklog-issue-type" title='$i18n.getText("plugin.jttp-worklog-issue-type.tooltip")'>$i18n.getText("plugin.jttp-worklog-issue-type")</th>
+                  #if($isShowIssueSummary)
+                   <th id="jttp-worklog-issue-summary">$i18n.getText("plugin.jttp-worklog-issue-summary")</th>
+                   #else 
                   <th id="jttp-worklog-issue-key">$i18n.getText("plugin.jttp-worklog-issue-key")</th>
+                  #end
                   <th id="jttp-worklog-issue-remaining">$i18n.getText("plugin.jttp-worklog-issue-remaining")</th>
                   <th id="jttp-worklog-start">$i18n.getText("plugin.jttp-worklog-start")</th>
                   <th id="jttp-worklog-end">$i18n.getText("plugin.jttp-worklog-end")</th>
                   <th id="jttp-worklog-duration">$i18n.getText("plugin.jttp-worklog-duration")</th>
-                  <th id="jttp-worklog-description">$i18n.getText("plugin.jttp-worklog-description")</th>
+                  <th #if($isShowIssueSummary) id="jttp-worklog-description-small" #else id="jttp-worklog-description" #end">$i18n.getText("plugin.jttp-worklog-description")</th>
                   <th id="jttp-worklog-actions">$i18n.getText("plugin.jttp-worklog-actions")</th>
                 </tr>
               </thead>
@@ -40,9 +44,15 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
                   <td>
                     <img class="img-tooltip" src="#if(!$worklog.issueAvatarId) #if( $worklog.issueTypeIconUrl.startsWith("http") )$worklog.issueTypeIconUrl#else$contextPath$worklog.issueTypeIconUrl#end#else$contextPath/secure/viewavatar?size=xsmall&avatarId=$worklog.issueAvatarId&avatarType=issuetype#end" alt="$worklog.issueTypeName" title="$worklog.issueTypeName"></img>
                   </td>
-                  <td class="table-issue" style="white-space: nowrap; #if($worklog.isClosed) text-decoration: line-through; #end">
+                   #if($isShowIssueSummary)
+                  <td class="table-issue" style="word-break: break-word; #if($worklog.isClosed) text-decoration: line-through; #end">
+                    <a href="$contextPath/browse/$worklog.issue" class="issue-link" title="#if($worklog.issueParent != '') $i18n.getText('plugin.parent.issue') $worklog.issueParent &#13 $worklog.issue #else $worklog.issue #end">$worklog.issueSummary</a>
+                  </td>
+                  #else
+                   <td class="table-issue" style="white-space: nowrap; #if($worklog.isClosed) text-decoration: line-through; #end">
                     <a href="$contextPath/browse/$worklog.issue" class="issue-link" title="#if($worklog.issueParent != '') $i18n.getText('plugin.parent.issue') $worklog.issueParent &#13 $worklog.issueSummary #else $worklog.issueSummary #end">$worklog.issue</a>
                   </td>
+                  #end
                   <td>
                   #if($isRounded)
                     #set($remainingValue=$worklog.roundedRemaining)
