--- a/src/main/resources/templates/reporting/reporting.vm
+++ b/src/main/resources/templates/reporting/reporting.vm
@@ -21,6 +21,9 @@ $webResourceManager.requireResource("jira.webresources:global-static")
 $webResourceManager.requireResource("jira.webresources:calendar")
 $webResourceManager.requireResource("jira.webresources:calendar-en")
 $webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.plugin.reporting-resources")
+#if($defaultCommand)
+$webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.popup.jttp-survey-dialog-resources")
+#end
   <body>
   	#set ($useISO8601 = $currentCalendar.useISO8601)
     #if($useISO8601 == true)
@@ -72,6 +75,19 @@ $webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.plug
           }
         );
       })(everit.reporting.main, AJS.$);
+      
+      everit.survey = everit.survey || {};
+      everit.survey.main = everit.survey.main || {};
+
+      (function(survey, jQuery) {
+        survey.options = jQuery.extend( 
+          {},
+          survey.options,
+          {
+            contextPath : '$contextPath',
+          }
+        );
+      })(everit.survey.main, AJS.$);
     </script>
 
    <section id="content" role="main">
