--- a/src/main/resources/templates/timetracker/summary.vm
+++ b/src/main/resources/templates/timetracker/summary.vm
@@ -18,7 +18,7 @@
                #if($issueRegexIsNotEmpty)
 				<div class="aui-item jttpTooltip">
 					<label class="progress-label" for="day-progress">Day: $dayFilteredSummary / $daySummary</label>
-					<div id="day-progress" class="progress" style="height:8px; margin-bottom:0px;">
+					<div id="day-progress" class="progress" style="height:8px; margin-bottom:0px;" data-jttp-percent="$dayFilteredPercent">
 						<div class="progress-bar" style="width: ${dayFilteredRealWorkIndicatorPrecent}%">                                        
 						</div>
 						<div class="progress-bar progress-bar-nowork" style="width: ${dayFilteredNonWorkIndicatorPrecent}%">                                        
@@ -28,7 +28,7 @@
 				</div>
 				<div class="aui-item jttpTooltip">
 					<label class="progress-label" for="week-progress">Week: $weekFilteredSummary / $weekSummary</label>
-					<div id="week-progress" class="progress" style="height:8px; margin-bottom:0px;">
+					<div id="week-progress" class="progress" style="height:8px; margin-bottom:0px;" data-jttp-percent="$weekFilteredPercent">
 						<div class="progress-bar" style="width: ${weekFilteredRealWorkIndicatorPrecent}%">                                        
 						</div>
 						<div class="progress-bar progress-bar-nowork" style="width: ${weekFilteredNonWorkIndicatorPrecent}%">                                        
@@ -38,7 +38,7 @@
 				</div>
 				<div class="aui-item jttpTooltip">
 					<label class="progress-label" for="month-progress">Month: $monthFilteredSummary / $monthSummary</label>
-					<div id="month-progress" class="progress" style="height:8px; margin-bottom:0px;">
+					<div id="month-progress" class="progress" style="height:8px; margin-bottom:0px;" data-jttp-percent="$monthFilteredPercent">
 						<div class="progress-bar" style="width: ${monthFilteredRealWorkIndicatorPrecent}%">                                        
 						</div>
 						<div class="progress-bar progress-bar-nowork" style="width: ${monthFilteredNonWorkIndicatorPrecent}%">                                        
@@ -49,7 +49,7 @@
 				#else
 				<div class="aui-item jttpTooltip">
 					<label class="progress-label" for="day-progress">Day: $daySummary</label>
-					<div id="day-progress" class="progress" style="height:8px; margin-bottom:0px;">
+					<div id="day-progress" class="progress" style="height:8px; margin-bottom:0px;" data-jttp-percent="$dayFilteredPercent">
 						<div class="progress-bar" style="width: ${dayIndicatorPrecent}%">                                        
 						</div>
 					</div>
@@ -57,7 +57,7 @@
 				</div>
 				<div class="aui-item jttpTooltip">
 					<label class="progress-label" for="week-progress">Week: $weekSummary</label>
-					<div id="week-progress" class="progress" style="height:8px; margin-bottom:0px;">
+					<div id="week-progress" class="progress" style="height:8px; margin-bottom:0px;" data-jttp-percent="$weekFilteredPercent">
 						<div class="progress-bar" style="width: ${weekIndicatorPrecent}%">                                        
 						</div>
 					</div>
@@ -65,7 +65,7 @@
 				</div>
 				<div class="aui-item jttpTooltip">
 					<label class="progress-label" for="month-progress">Month: $monthSummary</label>
-					<div id="month-progress" class="progress" style="height:8px; margin-bottom:0px;">
+					<div id="month-progress" class="progress" style="height:8px; margin-bottom:0px;" data-jttp-percent="$monthFilteredPercent">
 						<div class="progress-bar" style="width: ${monthIndicatorPrecent}%">                                        
 						</div>
 					</div>
