--- a/src/main/resources/templates/timetracker/list.vm
+++ b/src/main/resources/templates/timetracker/list.vm
@@ -31,7 +31,7 @@ $webResourceManager.requireResource("jira.webresources:ajax-preview", null)
                   <th id="jttp-worklog-end">$i18n.getText("plugin.jttp-worklog-end")</th>
                   <th id="jttp-worklog-duration">$i18n.getText("plugin.jttp-worklog-duration")</th>
                   <th #if($isShowIssueSummary) id="jttp-worklog-description-small" #else id="jttp-worklog-description" #end">$i18n.getText("plugin.jttp-worklog-description")</th>
-                  <th id="jttp-worklog-actions">$i18n.getText("plugin.jttp-worklog-actions")</th>
+                  <th id="jttp-worklog-actions" style="text-align: center;">$i18n.getText("plugin.jttp-worklog-actions")</th>
                 </tr>
               </thead>
             #if($worklogs.size() == 0)
