Do things in JIRAPLUGIN-352.
Rename reporting settings to permission settings.
Refactor the admin site date handling. (Include dates and exclude dates)
Add checkbox selector to non estimated issues.

--- a/src/main/resources/templates/reporting/reportingadminsettings.vm
+++ b/src/main/resources/templates/reporting/reportingadminsettings.vm
@@ -46,17 +46,100 @@
          </span>
       </div>
       <div class="aui-page-header-main">
-        <h1>Timetracker Reporting Settings</h1>
+        <h1>Permission settings</h1>
       </div>
     </div>
   </header>
-  <form name="adminSettingForm"  method="post" action="JiraTimetrackerReportingSettingsWebAction.jspa" class="aui">
+  <form name="adminSettingForm"  method="post" action="JiraTimetrackerPermissionSettingsWebAction.jspa" class="aui">
     #if(!$message.isEmpty())
     <div id="error_message">
       $i18n.getText($message)
     </div>
     #end
     
+    <div class="field-group">
+      <label for="pluginGroupSelect">$i18n.getText("plugin.setting.plugin.permission")</label>
+      <select multiple="multiple"
+        name="pluginGroupSelect" 
+        id="pluginGroupSelect" 
+        data-popup-link-message="" 
+        data-popup-width="620" 
+        data-popup-height="500" 
+        data-remove-on-un-select="true" 
+        data-ajax-options.query="-" 
+        data-ajax-options.url="${req.contextPath}/rest/api/2/groups/picker" 
+        data-ajax-options.data.query="-" 
+      #if (${action.currentJQL})
+        data-ajax-options.data.current_jql=${action.currentJQL}
+      #end
+        >
+      </select>
+      <script>
+        var gp = new AJS.MultiSelect({
+          element : AJS.$("#pluginGroupSelect"),
+          itemAttrDisplayed : "label",
+          showDropdownButton : false,
+          ajaxOptions : {
+            url : "${req.contextPath}/rest/api/2/groups/picker",
+            query : true, // keep going back to the sever for each keystroke
+            formatResponse : JIRA.GroupPickerUtil.formatResponse
+          }
+        });
+      #if($pluginGroups.size() != 0)
+        var list =[];
+        #foreach ($pluginGroup in $pluginGroups)
+        list.push("$pluginGroup");
+        #end
+        var groups = jQuery.map(list, function(value) {
+          return { value: value, label: value };
+        });
+        gp._addMultipleItems(groups,true);
+      #end
+      </script>
+      <div class="description">$i18n.getText("plugin.setting.plugin.permission.desc")</div>
+    </div>
+	
+	<div class="field-group">
+      <label for="timetrackerGroupSelect">$i18n.getText("plugin.setting.timetracker.permission")</label>
+      <select multiple="multiple"
+        name="timetrackerGroupSelect" 
+        id="timetrackerGroupSelect" 
+        data-popup-link-message="" 
+        data-popup-width="620" 
+        data-popup-height="500" 
+        data-remove-on-un-select="true" 
+        data-ajax-options.query="-" 
+        data-ajax-options.url="${req.contextPath}/rest/api/2/groups/picker" 
+        data-ajax-options.data.query="-" 
+      #if (${action.currentJQL})
+        data-ajax-options.data.current_jql=${action.currentJQL}
+      #end
+        >
+      </select>
+      <script>
+        var gp = new AJS.MultiSelect({
+          element : AJS.$("#timetrackerGroupSelect"),
+          itemAttrDisplayed : "label",
+          showDropdownButton : false,
+          ajaxOptions : {
+            url : "${req.contextPath}/rest/api/2/groups/picker",
+            query : true, // keep going back to the sever for each keystroke
+            formatResponse : JIRA.GroupPickerUtil.formatResponse
+          }
+        });
+      #if($timetrackerGroups.size() != 0)
+        var list =[];
+        #foreach ($timetrackerGroup in $timetrackerGroups)
+        list.push("$timetrackerGroup");
+        #end
+        var groups = jQuery.map(list, function(value) {
+          return { value: value, label: value };
+        });
+        gp._addMultipleItems(groups,true);
+      #end
+      </script>
+      <div class="description">$i18n.getText("plugin.setting.timetracker.permission.desc")</div>
+    </div>
     <div class="field-group">
       <label for="reportingGroupSelect">$i18n.getText("jtrp.plugin.reporting.permission")</label>
       <select multiple="multiple"
@@ -141,7 +224,7 @@
     <div class="buttons-container">
       <div class="buttons">
         <input id="savesettings" type="submit" name="savesettings" value="$i18n.getText('plugin.save')" class="aui-button aui-button-primary"/>
-        <input id="resetButton" type="button" name="reset" value="$i18n.getText('plugin.reset')" onclick="location.href='JiraTimetrackerReportingSettingsWebAction!default.jspa'" class="aui-button"/>
+        <input id="resetButton" type="button" name="reset" value="$i18n.getText('plugin.reset')" onclick="location.href='JiraTimetrackerPermissionSettingsWebAction!default.jspa'" class="aui-button"/>
         <input id="cancelButton" type="button" name="cancel" value="$i18n.getText('plugin.cancel')" onclick="location.href='/secure/ReportingWebAction!default.jspa'" class="aui-button"/>
       </div>
     </div>
