--- a/src/main/resources/templates/timetracker/jttp-head.vm
+++ b/src/main/resources/templates/timetracker/jttp-head.vm
@@ -19,9 +19,9 @@
                  #if($isProgressDaily)
                    <div class="jttp-headline-progress" id="jttp-headline-progress">
                      <div class="jttp-headline-progress-date" id="jttp-headline-progress-date">$dateTimeFormatter.format($date)</div>
-                     <div class="jttp-headline-progress-number" id="jttp-headline-progress-number">$daySumIndustryFormatted / $hoursPerDayFormatted</div>
+                     <div class="jttp-headline-progress-number" id="jttp-headline-progress-number">$summaryDTO.daySumIndustryFormatted / $summaryDTO.hoursPerDayFormatted</div>
                      <div id="jttp-headline-progress-bar">
-                       <div id="jttp-headline-progress-indicator" class="aui-progress-indicator" data-jttp-percent="$dailyPercent">
+                       <div id="jttp-headline-progress-indicator" class="aui-progress-indicator" data-jttp-percent="$summaryDTO.dailyPercent">
                          <span class="aui-progress-indicator-value" />
                        </div>
                      </div>
