--- a/src/main/resources/templates/timetracker/jttp.vm
+++ b/src/main/resources/templates/timetracker/jttp.vm
@@ -144,8 +144,8 @@ $webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.popu
           <div class="buttons-container">
             <div class="buttons">
               <input type="hidden" id="worklogsIds" name="worklogsIds" value="$worklogsIds" >
-              <input class="aui-button change-button" type="submit" value="Move all" #if($worklogsIds.size() == 0) disabled #end
-                      id="jttp-logwork-change-date-all" name="lw_chgdate" title="Move all the worklogs to a particular day">
+              <input class="aui-button change-button tooltip-bottom" type="submit" value="$i18n.getText('plugin.edit.all')" #if($worklogsIds.size() == 0) disabled #end
+                      id="jttp-logwork-change-date-all" name="lw_chgdate" title="$i18n.getText('plugin.jttp-worklog-change-date-for-all')">
             </div>
           </div>
         </form>
@@ -215,11 +215,11 @@ $webResourceManager.requireResourcesForContext("org.everit.jira.timetracker.popu
                     <label for="durationTime">$i18n.getText("plugin.duration.time")</label> 
                     <input id="radioDuration" type="radio" name="endOrDuration" value="duration" style="display: none;">
                     <span class="time-input-span">
-                      <input id="durationTime" class="text short-field"
+                      <input id="durationTime" class="text short-field tooltip-bottom"
                         name="durationTime" tabindex="2"
                         value="$durationTime" onkeypress="everit.jttp.main.handleEnterKey(event, '#issueSelect-textarea');"
                         onclick="everit.jttp.main.durationTimeInput();"
-                        title="empty or hh:mm" disabled 
+                        title="hh:mm / xh xm" disabled 
                         onblur="everit.jttp.main.calculateEndTime();">
                       <div id="durationTimeInput" class="time-input-div" onclick="everit.jttp.main.durationTimeInput();"></div>
                     </span>
